# observable-mlops-platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  commit_msg.txt  index.html  pyproject.toml  renovate.json  requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: 00-pr-validate.yml  01-observability.yml  02-data-pipeline.yml  03-drift-detection.yml  04-log-anomaly.yml  05-feature-skew.yml  06-alert-correlation.yml  07-predictive-scaling.yml  08-self-healing.yml  09-rag-runbook.yml  10-model-serving.yml  11-cost-optimizer.yml  13-security-policy.yml  14-dora-metrics.yml  15-slo-monitoring.yml  18-distributed-tracing.yml  19-gitops-drift.yml  20-data-quality.yml  21-hpo.yml  22-error-classification.yml  23-explainability.yml  24-rate-limiting.yml  25-feature-monitoring.yml  26-catalog-validate.yml  27-unit-tests.yml  28-sbom-signing.yml  29-resilience-chaos.yml  90-e2e-integration.yml  91-publish-portal.yml
aiops/falco/: custom_rules.yml
aiops/n8n-workflows/: self-healing-workflow.json
aiops/policies/kyverno/: disallow-privileged.yml  require-labels.yml
aiops/policies/opa/: model_promotion.rego  model_promotion_test.rego  self_healing.rego  self_healing_test.rego
backstage/: catalog-info.yaml
data/: dvc.yaml
data/synthetic/: __init__.py  generate_alerts.py  generate_container_logs.py  generate_cost_data.py  generate_http_traffic.py  generate_pod_metrics.py
eval/: __init__.py  metrics.py  scorer.py
governance/eu-ai-act/: compliance_check.py
infra/docker-compose/: docker-compose.mlops-core.yml  docker-compose.observability.yml  docker-compose.services.yml
infra/docker-compose/config/: fluent-bit.conf  loki.yml  tempo.yml
infra/helm/falco/: values.yaml
infra/kind/: pipelines-cluster.yml  policy-cluster.yml  serving-cluster.yml
llmops/ragas/: ragas_eval.py
observability/alerts/: alertmanager.yml  prometheus.yml
observability/otel/: otelcol.yml
platform/chaos/: memory-and-pod-resilience.yaml  opa-unavailable.yaml  redis-latency.yaml
platform/logging/: structured_logger.py
platform/rollback/: auto_rollback.py
platform/shadow-mode/: kserve-shadow.yaml  shadow_evaluator.py
platform/slo-definitions/: platform-slos.yaml
scripts/: audit_readme.py  publish-portal.sh  run-all-workflows.sh  setup-dagshub.sh  setup-kind.sh  setup-ollama.sh  validate_data.py
services/alert-correlator/: Dockerfile
services/anomaly-detector/: Dockerfile
services/cost-optimizer/: Dockerfile
services/drift-monitor/: Dockerfile
services/predictive-scaler/: Dockerfile
services/runbook-agent/: Dockerfile
services/self-healing/: Dockerfile
tests/load/: k6_drift_monitor.js  k6_runbook_agent.js  k6_self_healing.js
tests/unit/: test_correlator.py  test_drift_engine.py  test_predictive_scaler.py  test_resilience.py  test_runbook_agent.py  test_scorer.py  test_self_healing.py  test_shadow_evaluator.py
(+29 files in other folders)
