[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "observable-mlops-platform"
version = "0.1.0"
description = "Enterprise-grade AIOps + MLOps platform — 23 use cases, all CI-gated"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "B008", "N803", "N806"]
exclude = ["__pycache__", ".git", ".venv", "venv", "dist", "build", "*.egg-info"]

[tool.ruff.per-file-ignores]
"data/synthetic/*.py" = ["B"]
"mlops/experiments/*.py" = ["F841"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git | \.venv | venv | build | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --no-header -rN"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
