[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "observable-mlops-platform"
version = "0.1.0"
description = "Enterprise-grade AIOps + MLOps platform — 23 use cases, all CI-gated"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["__pycache__", ".git", ".venv", "venv", "dist", "build", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "N", "UP", "B", "A", "C4"]
ignore = [
    "E501",   # line too long
    "B008",   # function call in default arg
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "UP017",  # use datetime.UTC (style preference)
    "B905",   # zip without strict= (style preference)
    "E741",   # ambiguous variable name (handled per-file)
    "E712",   # equality comparison to True/False (handled per-file)
    "SIM105", # use contextlib.suppress (style preference)
]

[tool.ruff.lint.per-file-ignores]
"data/synthetic/*.py" = ["B", "F841"]
"mlops/experiments/*.py" = ["F841"]
"mlops/pipelines/**/*.py" = ["F841"]
"services/*/src/*.py" = ["F841", "B007", "E741", "E712", "SIM105"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git | \.venv | venv | build | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --no-header -rN"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
